--- a/pages/inputs.html
+++ b/pages/inputs.html
@@ -10,10 +10,10 @@ permalink: /inputs
   {% include blocks/extra-options/background.html %}
   {% include blocks/extra-options/theme.html %}
   <div class="px-4">
-    <div class="field field--not-empty">
-      <div class="field__label">Loading</div>
-      <div class="field__data">
-        <div class="field__value">
+    <div class="toolbox-field toolbox-field--not-empty">
+      <div class="toolbox-field__label">Loading</div>
+      <div class="toolbox-field__data">
+        <div class="toolbox-field__value">
           <div class="toolbox-selector toolbox-selector--multiselect toolbox-selector--expanded JS_toolbox-selector JS_extra">
             <div class="toolbox-selector__item JS_toolbox-selectorItem--active JS_toolbox-selectorItem" tabindex='0'>
               <div class="toolbox-selector__block">
@@ -29,49 +29,49 @@ permalink: /inputs
 
 <script>
   $('.JS_load_inputs').on('click', function() {
-    $('input.field__input').each(function() {
-      $(this).closest('.field__value').toggleClass('animate-loading');
+    $('input.toolbox-field__input').each(function() {
+      $(this).closest('.toolbox-field__value').toggleClass('animate-loading');
     });
   });
 </script>
 
 <div class="flex flex-col sm:flex-row m-8 py-4 border-b-2 border-dashed border-grey-dark overflow-hidden">
   <div class="sm:w-1/2 px-4">
-    {% comment %} Field {% endcomment %}
-    <div class="field">
-      <div class="field__label">Title</div>
-      <div class="field__data">
-        <div class="field__value">
-          <input class="field__input" type="text" value="">
+    {% comment %} toolbox-field {% endcomment %}
+    <div class="toolbox-field">
+      <div class="toolbox-field__label">Title</div>
+      <div class="toolbox-field__data">
+        <div class="toolbox-field__value">
+          <input class="toolbox-field__input" type="text" value="">
         </div>
       </div>
       <div class="toolbox-note">
-        <li>Example toolbox-note under empty field. The label is moved into the input field's position and acts as placeholder.</li>
-        <li>If a field (block around the input) is not empty, you can use the field--not-empty class to make the label stay on top, used in all other pages.</li>
+        <li>Example toolbox-note under empty toolbox-field. The label is moved into the input toolbox-field's position and acts as placeholder.</li>
+        <li>If a toolbox-field (block around the input) is not empty, you can use the toolbox-field--not-empty class to make the label stay on top, used in all other pages.</li>
       </div>
     </div>
 
-    {% comment %} Field {% endcomment %}
-    <div class="field">
-      <div class="field__label">Email</div>
-      <div class="field__data">
-        <div class="field__value">
-          <input class="field__input" type="email" value="nick.de.jaeger@tenforce.com">
+    {% comment %} toolbox-field {% endcomment %}
+    <div class="toolbox-field">
+      <div class="toolbox-field__label">Email</div>
+      <div class="toolbox-field__data">
+        <div class="toolbox-field__value">
+          <input class="toolbox-field__input" type="email" value="nick.de.jaeger@tenforce.com">
         </div>
       </div>
       <div class="toolbox-note">
-        <li>If the input field is focused or filled, the label is above the input field. When the input field becomes empty again, the label moves down.</li>
+        <li>If the input toolbox-field is focused or filled, the label is above the input toolbox-field. When the input toolbox-field becomes empty again, the label moves down.</li>
         <li>The overlay is lighter, and click through (toolbox-overlay--visible AND toolbox-overlay--text)</li>
       </div>
     </div>
 
-    {% comment %} Field {% endcomment %}
-    <div class="field JS_field--error">
-      <div class="field__label">Assigned to</div>
-      <div class="field__data">
-        <div class="field__error JS_has-popup JS_has-popup--error" data-popid="#ms-error-user"></div>
-        <div class="field__value">
-          <input class="field__input" type="text" value="">
+    {% comment %} toolbox-field {% endcomment %}
+    <div class="toolbox-field JS_toolbox-field--error">
+      <div class="toolbox-field__label">Assigned to</div>
+      <div class="toolbox-field__data">
+        <div class="toolbox-field__error JS_has-popup JS_has-popup--error" data-popid="#ms-error-user"></div>
+        <div class="toolbox-field__value">
+          <input class="toolbox-field__input" type="text" value="">
         </div>
       </div>
       <div class="toolbox-note">
@@ -99,9 +99,9 @@ permalink: /inputs
 </div>
 
 <script>
-  $(".JS_field--error input").on('keyup', function() {
-    $('.JS_field--error').each(function() {
-      $(this).addClass('field--error');
+  $(".JS_toolbox-field--error input").on('keyup', function() {
+    $('.JS_toolbox-field--error').each(function() {
+      $(this).addClass('toolbox-field--error');
     });
   });
 </script>
