--- a/pages/toolbox-tabs.html
+++ b/pages/toolbox-tabs.html
@@ -10,10 +10,10 @@ permalink: /toolbox-tabs
   {% include blocks/extra-options/background.html %}
   {% include blocks/extra-options/theme.html %}
   <div class="px-4">
-    <div class="field field--not-empty">
-      <div class="field__label">Tabs panel width</div>
-      <div class="field__data">
-        <div class="field__value">
+    <div class="toolbox-field toolbox-field--not-empty">
+      <div class="toolbox-field__label">Tabs panel width</div>
+      <div class="toolbox-field__data">
+        <div class="toolbox-field__value">
           <div class="toolbox-selector toolbox-selector--singleselect toolbox-selector--expanded toolbox-selector--required JS_toolbox-selector JS_extra">
             <div class="toolbox-selector__item JS_toolbox-selectorItem--active toolbox-selector__item--selected JS_toolbox-selectorItem JS_changeTabsWidth" tabindex='0' data-width="sm:w-3/4">
               <div class="toolbox-selector__block">
