--- a/pages/comments.html
+++ b/pages/comments.html
@@ -110,7 +110,7 @@ permalink: /comments
           @source: https://tracker.tenforce.com/workspace/383/83172f/561531#commentsAndAttachments
         {% endcomment %}
 
-        <div class="comments-separator">
+        <div class="toolbox-comment-separator">
           <span class="h8">Last month</span>
         </div>
 
@@ -132,7 +132,7 @@ permalink: /comments
           </div>
         </div>
 
-        <div class="comments-separator">
+        <div class="toolbox-comment-separator">
           <span class="h8">Last year</span>
         </div>
 
